scripts/buildfire/components/ratingSystem/index.css
.starsContainer {
  display: flex;
  justify-content: space-around;
  font-size: 50px;
}

.add-rating-screen {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 20;
  background-color: rgb(0 0 0 / 0.3);
}

.add-rating-screen-content {
  z-index: 100;
  width: 90vw;
  margin: 0 auto;
  border-radius: 4px;
  overflow: hidden;
  max-height: 95vh;
  position: absolute;
  left: 0;
  right: 0;
  box-shadow: 1px -2px 4px -1px rgb(216 216 216 / 16%),
    0 0 8px 3px rgb(171 171 171 / 16%), 0 -1px 46px 8px rgb(185 185 185 / 4%);
  padding: 8px 24px 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.add-rating-title {
  font-size: 1.5em;
  margin: 24px 0 0;
  font-weight: 600;
  padding: 0 24px;
  overflow-wrap: break-word;
}

span.rating-time-ago {
  margin-top: 4px;
  font-size: 12px !important;
  opacity: 0.6;
}

.add-rating-subtitle {
  margin-top: 24px;
  width: 100%;
  font-size: medium;
  text-align: center;
}

.add-rating-header {
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
  width: 100%;
}

.add-rating-screen-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: black;
  opacity: 0.7;
  z-index: 10;
}

.rating-stars {
  margin-top: 16px;
  font-size: 20px;
  height: 35px;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.text-area {
  margin-top: 10px;
  padding: 5px;
  width: 100%;
  height: 80px;
  border: 1px solid #ccc;
  border-radius: 5px;
  cursor: pointer;
  overflow: scroll;
}

.add-photos {
  margin-top: 10px;
}

.empty-state-container {
  padding: 20px;
}

.review-images-container {
  width: 100%;
  margin-top: 16px;
  overflow-x: scroll;
  overflow-y: hidden;
  display: flex;
}

.review-image-container {
  position: relative;
  min-width: 80px;
  height: 80px;
  margin-right: 5px;
}

.review-image-delete {
  position: absolute;
  top: 0;
  right: 0;
  width: 15px;
  height: 15px;
  border-radius: 10px;
  display: flex;
  justify-content: center;
  align-items: center;
  line-height: 15px;
  font-size: 10px;
  cursor: pointer;
  padding-top: 1px;
}

.review-image {
  width: 80px;
  height: 80px;
  object-fit: cover;
  border-radius: 5px;
}

.ratings-screen {
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 20;
  overflow-y: scroll;
}

.ratings-screen-rating {
  display: flex;
  flex-direction: column;
  z-index: 20;
  padding: 20px 20px 10px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.05);
}

.rating-user-image {
  width: 40px;
  height: 40px;
  min-width: 40px;
  min-height: 40px;
  border-radius: 40px;
  object-fit: cover;
  object-position: center;
  margin-right: 10px;
}

.rating-name-and-stars {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.rating-header {
  display: flex;
  justify-content: flex-start;
  margin-bottom: 10px;
}

.rating-user-display-name {
  font-size: 14px !important;
  font-weight: bold;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin-bottom: 4px;
  width: 100%;
}

.rating-review-text {
  margin-bottom: 10px;
  margin-left: 50px;
}

.rating-review-images {
  overflow-x: auto;
  overflow-y: hidden;
  display: flex;
}

.rating-review-image {
  width: 80px;
  height: 80px;
  object-fit: cover;
  border-radius: 5px;
  margin-right: 10px;
}

.stars-span {
  color: #fcb040;
  width: fit-content;
}

.stars-span :last-child {
  margin-right: 0;
}

.rating-stars div {
  cursor: pointer;
  margin-right: 0.5em;
}

.rating-stars :last-child {
  margin-right: 0;
}

.submit-rating-button {
  padding: 8px 12px;
  text-transform: uppercase;
  font-weight: 700;
  font-size: 14px;
  letter-spacing: 0.05em;
  min-height: 36px;
  text-align: right;
  margin-left: auto;
  border-radius: 4px;
  margin-top: 16px;
}

.submit-rating-button.disabled {
  opacity: 0.5;
  cursor: normal;
}

.ovarall-rating-container {
  padding: 10px 20px 17px;
  position: relative;
  
  padding-top: calc(env(safe-area-inset-top) + 10px) !important;
}

.ovarall-rating-container.shadow {
  box-shadow: 0px 1px 10px #d2d2d2;
}

.ovarall-rating-container.border {
  border-bottom: 1px solid #d2d2d2;
}

.ovarall-rating-container h5,
.ovarall-rating-container h6 {
  text-align: center;
  margin-top: 16px;
  margin-bottom: 16px;
}

.overall-rating-stars {
  font-size: 24px !important;
  color: #fcb040;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 16px;
}

.ovarall-rating-container span {
  font-size: 24px !important;
}

.stars-span span {
  font-size: 14px !important;
}

.delete-button {
  margin-top: 10px;
  min-width: 200px;
  color: white;
  background-color: #ff9d9d;
  margin-right: 10px;
}

.flex-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.full-star {
  height: inherit;
  width: 1em;
  height: 1em;
  line-height: 100%;
  margin-right: 0.5em;
}

.half-star {
  position: absolute;
  left: 0;
  bottom: 0;
  height: 1em;
  width: 1em;
  line-height: 100%;
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

.average-rating {
  margin-left: 10px;
}

.ratings {
  display: flex;
  padding: 10px 20px;
  flex-direction: column;
  align-items: center;
}

.ratings-head {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 14px;
  width: 100%;
}

.reviews-container {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 40px !important;
  height: 40px;
  color: #fcb040;
  margin-top: 10px;
  letter-spacing: 10px;
}

.edit-rating-button {
  margin-left: auto;
  font-size: 14px;
  cursor: pointer;
  text-transform: uppercase;
}

.add-rating-button {
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  font-size: 13px;
  cursor: pointer;
  width: fit-content;
  text-transform: uppercase;
}

.ratings-text {
  font-size: 20px;
}

.text-area-container {
  position: relative;
  background-color: rgba(150, 150, 150, 0.08);
  border-bottom: 1px solid rgba(150, 150, 150, 0.3);
  border-radius: 4px 4px 0 0;
  margin-bottom: 4px;
  margin-top: 16px;
}

.text-area-label {
  padding: 8px;
  top: 4px;
  left: 8px;
  font-size: 12px;
  opacity: 0.8;
  margin: 0;
}

.text-area-input {
  height: auto;
  max-width: 100%;
  min-width: 100%;
  height: 80px;
  min-height: 80px;
  max-height: 140px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 0;
  resize: none;
  padding: 12px 8px;
  padding-top: 0;
  font-size: 14px;
  color: inherit !important;
  margin-bottom: 0 !important;
}

span#closeButton {
  font-family: "icomoon" !important;
  cursor: pointer;
  position: fixed;
  left: 20px;
  top: 20px;
  z-index: 100;
}

.ovarall-rating-container a.rating-cancel-btn {
  position: absolute;
  top: 16px;
  left: 16px;
}

